# docs/swagger.json
@@ -237,6 +237,36 @@
                 }
             }
         },
+        "/api/v2/goals": {
+            "get": {
+                "description": "Get a list of goals",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "goals"
+                ],
+                "summary": "Get goals",
+                "operationId": "GetGoal",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.GoalResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v2/plans/suggest": {
             "post": {
                 "description": "ユーザーが設定した目標とタスクに基づいて日々のお手伝いプランを生成する",
@@ -319,6 +349,14 @@
         }
     },
     "definitions": {
+        "controllers.GoalResponse": {
+            "type": "object",
+            "properties": {
+                "goal": {
+                    "$ref": "#/definitions/models.Goal"
+                }
+            }
+        },
         "controllers.SuggestRequest": {
             "type": "object",
             "properties": {
@@ -442,6 +480,17 @@
                     "items": {
                         "$ref": "#/definitions/models.Task"
                     }
+                }
+            }
+        },
+        "models.Goal": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "point": {
+                    "type": "integer"
                 }
             }
         },
