# models/goal.go
@@ -1,0 +1,6 @@
+package models
+
+type Goal struct {
+	Name  string `json:"name"`
+	Point int    `json:"point"`
+}
